More cleanup, fixed some CME errors when despawning mobs.